--- a/package.json
+++ b/package.json
@@ -12,37 +12,37 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ioredis": "^5.3.2",
-    "pg": "^8.11.3",
-    "dotenv": "^16.3.1",
-    "winston": "^3.10.0",
-    "axios": "^1.5.0",
+    "express": "^4.21.2",
+    "ioredis": "^5.4.2",
+    "pg": "^8.13.1",
+    "dotenv": "^16.4.7",
+    "winston": "^3.17.0",
+    "axios": "^1.7.9",
     "tsyringe": "^4.8.0",
-    "reflect-metadata": "^0.1.13",
-    "class-validator": "^0.14.0",
-    "typeorm": "^0.3.17"
+    "reflect-metadata": "^0.2.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.4",
-    "@types/node": "^20.5.7",
-    "@types/ioredis": "^5.3.6",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.6.4",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.2",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.10.10",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=22.0.0"
   },
   "jest": {
     "preset": "ts-jest",
