--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "reflect-metadata": "^0.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "openai": "^4.82.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
