--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "ioredis": "^5.4.2",
     "openai": "^4.82.0",
     "reflect-metadata": "^0.2.2",
